--- a/app/src/main/res-screen/main/layout/activity_main.xml
+++ b/app/src/main/res-screen/main/layout/activity_main.xml
@@ -7,26 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".feature.activities.MainActivity"
     >
-
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Hello World!"
-      app:layout_constraintBottom_toBottomOf="parent"
+  <FrameLayout
+      android:id="@+id/container_main"
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:layout_above="@id/bottomBar"
+      app:layout_constraintBottom_toTopOf="@+id/bottomBar"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       />
-
-  <ImageView
-      android:id="@+id/iv"
+  <android.support.design.widget.BottomNavigationView
+      android:id="@+id/bottomBar"
       android:layout_width="0dp"
-      android:layout_height="200dp"
-      android:layout_margin="16dp"
+      android:layout_height="56dp"
+      android:layout_alignParentBottom="true"
+      android:layout_gravity="bottom|start"
+      app:itemIconTint="@color/bottom_bar_icon_color"
+      app:itemTextColor="@color/bottom_bar_text_color"
+      app:itemBackground="@drawable/bottom_bar_background"
+      app:menu="@menu/bottombar_tabs"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
       />
-
 </android.support.constraint.ConstraintLayout>
