--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,6 @@
   <color name="colorDarkGray">#4a4a4a</color>
   <color name="colorGray">#e05e5e5e</color>
   <color name="colorLightGray">#9b9b9b</color>
-  <color name="colorLLightGray">#ededf3</color>
+  <color name="colorLLightGray">#fdfdfe</color>
   <color name="colorRed">#de4354</color>
 </resources>
