--- a/app/src/main/res-screen/main/layout/item_service_parent.xml
+++ b/app/src/main/res-screen/main/layout/item_service_parent.xml
@@ -24,6 +24,8 @@
       android:layout_height="wrap_content"
       android:layout_marginBottom="16dp"
       android:layout_marginTop="8dp"
+      android:textSize="16sp"
+      android:gravity="center"
       android:fontFamily="@font/circe_regular"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
