--- a/app/src/main/res/menu/bottombar_tabs.xml
+++ b/app/src/main/res/menu/bottombar_tabs.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
   <item
       android:id="@+id/tab_catalog"
       android:icon="@drawable/ic_profile_white_24dp"
-      android:title="@string/tab_catalog"/>
+      android:title="@string/tab_catalog"
+      app:showAsAction="always|withText"/>
   <item
       android:id="@+id/tab_payment"
       android:icon="@drawable/ic_profile_white_24dp"
-      android:title="@string/tab_payment"/>
+      android:title="@string/tab_payment"
+      app:showAsAction="always|withText"/>
+  <item
+      android:id="@+id/tab_history"
+      android:icon="@drawable/ic_profile_white_24dp"
+      android:title="@string/tab_history"
+      app:showAsAction="always|withText"/>
   <item
       android:id="@+id/tab_map"
       android:icon="@drawable/ic_profile_white_24dp"
-      android:title="@string/tab_map"/>
+      android:title="@string/tab_map"
+      app:showAsAction="always|withText"/>
 </menu>
