--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,16 +2,19 @@
 <resources>
   <color name="colorPrimary">#3F51B5</color>
   <color name="colorPrimaryDark">#303F9F</color>
-  <color name="colorAccent">#FF4081</color>
+  <color name="colorAccent">#4da6d7</color>
 
   <color name="colorWhite">#ffffff</color>
   <color name="colorAlmostWhite">#fdfdfe</color>
   <color name="colorBlack">#000000</color>
   <color name="colorAlmostBlack">#161616</color>
-  <color name="colorBlueGray">#585f6f</color>
-  <color name="colorDarkGray">#4a4a4a</color>
-  <color name="colorGray">#e05e5e5e</color>
-  <color name="colorLightGray">#9b9b9b</color>
+  <color name="colorDarkGray">#3e4757</color>
+  <color name="colorGray">#797a7c</color>
+  <color name="colorLightGray">#eeeef0</color>
   <color name="colorLLightGray">#fdfdfe</color>
   <color name="colorRed">#de4354</color>
+  <color name="colorGreen">#58a42c</color>
+
+  <color name="colorTransparent">#00000000</color>
+  <color name="colorTransparentWhite">#70ffffff</color>
 </resources>
