--- a/app/src/main/res-screen/main/layout/fragment_payment.xml
+++ b/app/src/main/res-screen/main/layout/fragment_payment.xml
@@ -1,7 +1,196 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorLightGray"
     >
+  <android.support.constraint.ConstraintLayout
+      android:id="@+id/clTicket"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginEnd="8dp"
+      android:layout_marginStart="8dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      >
+    <com.vipulasri.ticketview.TicketView
+        android:id="@+id/ticketView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:borderColor="@color/colorAccent"
+        app:borderWidth="1dp"
+        app:cornerType="rounded"
+        app:dividerColor="@color/colorDarkGray"
+        app:dividerDashLength="3dp"
+        app:dividerType="dash"
+        app:dividerWidth="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:orientation="horizontal"
+        app:scallopPositionPercent="45"
+        app:scallopRadius="10dp"
+        app:showBorder="false"
+        app:showDivider="true"
+        app:ticketElevation="16dp"
+        />
+    <android.support.v7.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/circe_extra_bold"
+        android:gravity="center_horizontal"
+        android:letterSpacing="0.09"
+        android:text="@string/payment_show_text"
+        android:textAllCaps="true"
+        android:textColor="@color/colorGreen"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/guideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.45"
+        />
+    <TextView
+        android:id="@+id/tvCode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/circe_regular"
+        android:text="@string/payment_code"
+        android:textAllCaps="true"
+        android:textColor="@color/colorDarkGray"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@id/tvCodeNum"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guideline"
+        />
+    <TextView
+        android:id="@+id/tvCodeNum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/circe_regular"
+        android:textAllCaps="true"
+        android:textColor="@color/colorDarkGray"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tvCode"
+        app:layout_constraintTop_toBottomOf="@id/guideline"
+        tools:text="992341231"
+        />
+    <TextView
+        android:id="@+id/tvDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/circe_regular"
+        android:textColor="@color/colorGray"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvCode"
+        tools:text="Сформирован 11:24, 2.03.18"
+        />
+    <ImageView
+        android:id="@+id/ivBarCode"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvDate"
+        />
+  </android.support.constraint.ConstraintLayout>
+
+  <android.support.v7.widget.CardView
+      android:id="@+id/cvService"
+      android:layout_width="0dp"
+      android:layout_height="50dp"
+      android:layout_marginEnd="14dp"
+      android:layout_marginStart="14dp"
+      android:layout_marginTop="16dp"
+      app:elevation="16dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/clTicket"
+      >
+
+  </android.support.v7.widget.CardView>
+  <View
+      android:layout_width="0dp"
+      android:layout_height="1dp"
+      android:layout_marginTop="12dp"
+      android:background="@color/colorTransparentWhite"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/cvService"
+      />
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="24dp"
+      android:fontFamily="@font/circe_regular"
+      android:text="@string/payment_to_pay"
+      android:textColor="@color/colorDarkGray"
+      android:textSize="20sp"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/cvService"
+      />
+  <TextView
+      android:id="@+id/tvAmount"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginEnd="16dp"
+      android:layout_marginTop="24dp"
+      android:fontFamily="@font/circe_regular"
+      android:textColor="@color/colorDarkGray"
+      android:textSize="20sp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/cvService"
+      tools:text="80.5 hrn"
+      />
+  <LinearLayout
+      android:id="@+id/llDelete"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      android:padding="8dp"
+      app:layout_constraintEnd_toEndOf="@+id/tvAmount"
+      app:layout_constraintStart_toStartOf="@+id/tvAmount"
+      app:layout_constraintTop_toBottomOf="@+id/tvAmount"
+      >
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/ivDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/rubbish_bin"
+        android:layout_gravity="center_vertical"
+        />
+    <TextView
+        android:id="@+id/tvDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="@string/payment_delete"
+        android:textColor="@color/colorAccent"
+        />
+  </LinearLayout>
 </android.support.constraint.ConstraintLayout>
