service child screen

--- a/app/src/main/res-screen/main/layout/fragment_catalog_child.xml
+++ b/app/src/main/res-screen/main/layout/fragment_catalog_child.xml
@@ -17,15 +17,15 @@
       >
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/ivBack"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_profile_white_24dp"
+        app:srcCompat="@drawable/ic_back_white_34dp"
         />
     <TextView
         android:id="@+id/tvTitle"
