service child screen

--- a/app/src/main/res-screen/main/layout/item_service_child.xml
+++ b/app/src/main/res-screen/main/layout/item_service_child.xml
@@ -5,13 +5,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingTop="8dp"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
     android:foreground="?attr/selectableItemBackground"
-    android:background="@color/colorLLightGray"
     >
   <android.support.constraint.ConstraintLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_margin="8dp"
+      android:background="@color/colorAlmostWhite"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
@@ -19,8 +21,8 @@
       >
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/ivIcon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,8 +45,8 @@
         />
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/ivArrow"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
