--- a/app/src/main/res-screen/main/layout/fragment_catalog_child.xml
+++ b/app/src/main/res-screen/main/layout/fragment_catalog_child.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorLLightGray"
+    android:background="@color/colorLightGray"
     >
   <android.support.constraint.ConstraintLayout
       android:id="@+id/clTitle"
@@ -63,6 +63,6 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/clTitle"
-      tools:listitem="@layout/item_service_parent"
+      tools:listitem="@layout/item_service_child"
       />
 </android.support.constraint.ConstraintLayout>
