--- a/app/src/main/res-screen/main/layout/item_service_child.xml
+++ b/app/src/main/res-screen/main/layout/item_service_child.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
     android:foreground="?attr/selectableItemBackground"
@@ -13,7 +14,7 @@
   <android.support.constraint.ConstraintLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:background="@color/colorAlmostWhite"
+      android:background="@drawable/shape_rounded_corners"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
@@ -25,8 +26,10 @@
         android:layout_height="36dp"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/expandable_layout"
         tools:src="@tools:sample/avatars"
         />
     <TextView
@@ -48,9 +51,11 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/expandable_layout"
         app:srcCompat="@drawable/ic_arrow_collapsed"
         />
     <net.cachapa.expandablelayout.ExpandableLayout
@@ -59,21 +64,124 @@
         android:layout_height="wrap_content"
         app:el_duration="300"
         app:el_expanded="false"
-        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/ivIcon"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         >
 
-      <TextView
+      <android.support.constraint.ConstraintLayout
+          android:id="@+id/clDialog"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:elevation="4dp"
-          android:gravity="center"
-          android:padding="16dp"
-          android:text="Content"
-          android:textColor="#000000"
-          />
+          android:background="@drawable/shape_rounded_corners"
+          >
+
+        <View
+            android:id="@+id/dashLine"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:background="@drawable/shape_dash_line"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+        <EditText
+            android:id="@+id/etAccount"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:padding="8dp"
+            android:fontFamily="@font/circe_regular"
+            android:background="@drawable/selector_et_bg"
+            android:hint="@string/payment_account_hint"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dashLine"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:alpha=".6"
+            android:fontFamily="@font/circe_bold"
+            android:text="@string/payment_account_title"
+            android:textAllCaps="true"
+            android:textColor="@color/colorGray"
+            android:textSize="12sp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintStart_toStartOf="@id/etAccount"
+            app:layout_constraintTop_toBottomOf="@id/etAccount"
+            />
+        <EditText
+            android:id="@+id/etAmount"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:padding="8dp"
+            android:fontFamily="@font/circe_regular"
+            android:background="@drawable/selector_et_bg"
+            android:hint="@string/payment_amount_hint"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etAccount"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:alpha=".6"
+            android:fontFamily="@font/circe_bold"
+            android:text="@string/payment_amount_title"
+            android:textAllCaps="true"
+            android:layout_marginTop="4dp"
+            android:textColor="@color/colorGray"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@id/etAmount"
+            app:layout_constraintTop_toBottomOf="@id/etAmount"
+            />
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btnCreateTemplate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/shape_rounded_corner_bot"
+            android:fontFamily="@font/circe_regular"
+            android:text="@string/payment_create"
+            android:textAllCaps="false"
+            android:textColor="@color/colorDarkGray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btnGoToPayment"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etAmount"
+            />
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btnGoToPayment"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/shape_green_gradient_rounded"
+            android:fontFamily="@font/circe_bold"
+            android:text="@string/payment_go_to_payment"
+            android:textAllCaps="false"
+            android:textColor="@color/colorAlmostWhite"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/btnCreateTemplate"
+            app:layout_constraintTop_toBottomOf="@+id/etAmount"
+            />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:alpha=".5"
+            android:background="@color/colorTransparentGray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btnCreateTemplate"
+            />
+      </android.support.constraint.ConstraintLayout>
 
     </net.cachapa.expandablelayout.ExpandableLayout>
   </android.support.constraint.ConstraintLayout>
