--- a/app/src/main/res-screen/main/layout/fragment_catalog.xml
+++ b/app/src/main/res-screen/main/layout/fragment_catalog.xml
@@ -23,12 +23,22 @@
   <android.support.v7.widget.RecyclerView
       android:id="@+id/rvCatalog"
       android:layout_width="0dp"
-      android:layout_height="wrap_content"
+      android:layout_height="0dp"
       android:layout_marginTop="16dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+      app:layout_constraintBottom_toBottomOf="parent"
       tools:listitem="@layout/item_service_parent"
+      />
+  <ProgressBar
+      android:id="@+id/pbProgress"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+      app:layout_constraintBottom_toBottomOf="parent"
       />
   <View
       android:layout_width="0dp"
