--- a/app/src/main/res-screen/main/layout/fragment_catalog_child.xml
+++ b/app/src/main/res-screen/main/layout/fragment_catalog_child.xml
@@ -66,4 +66,13 @@
       app:layout_constraintBottom_toBottomOf="parent"
       tools:listitem="@layout/item_service_child"
       />
+  <ProgressBar
+      android:id="@+id/pbProgress"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/clTitle"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
 </android.support.constraint.ConstraintLayout>
