--- a/app/src/main/res-screen/main/layout/fragment_catalog.xml
+++ b/app/src/main/res-screen/main/layout/fragment_catalog.xml
@@ -2,10 +2,12 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorLLightGray"
+    android:clickable="true"
+    android:focusable="true"
     >
   <TextView
       android:id="@+id/tvTitle"
@@ -25,20 +27,20 @@
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:layout_marginTop="16dp"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/tvTitle"
-      app:layout_constraintBottom_toBottomOf="parent"
       tools:listitem="@layout/item_service_parent"
       />
   <ProgressBar
       android:id="@+id/pbProgress"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/tvTitle"
-      app:layout_constraintBottom_toBottomOf="parent"
       />
   <View
       android:layout_width="0dp"
