--- a/app/src/main/res-screen/main/layout/fragment_catalog_child.xml
+++ b/app/src/main/res-screen/main/layout/fragment_catalog_child.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorLightGray"
+    android:clickable="true"
+    android:focusable="true"
     >
   <android.support.constraint.ConstraintLayout
       android:id="@+id/clTitle"
@@ -60,19 +62,19 @@
       android:id="@+id/rvCatalogChild"
       android:layout_width="0dp"
       android:layout_height="0dp"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/clTitle"
-      app:layout_constraintBottom_toBottomOf="parent"
       tools:listitem="@layout/item_service_child"
       />
   <ProgressBar
       android:id="@+id/pbProgress"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/clTitle"
-      app:layout_constraintBottom_toBottomOf="parent"
       />
 </android.support.constraint.ConstraintLayout>
