--- a/app/src/main/res-screen/main/layout/item_service_parent.xml
+++ b/app/src/main/res-screen/main/layout/item_service_parent.xml
@@ -5,17 +5,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:foreground="?attr/selectableItemBackground"
     android:background="@color/colorLLightGray"
+    android:foreground="?attr/selectableItemBackground"
     >
+  <ImageView
+      android:id="@+id/ivBg"
+      android:layout_width="100dp"
+      android:layout_height="100dp"
+      android:layout_marginTop="16dp"
+      android:src="@drawable/shape_service_circle"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      />
   <android.support.v7.widget.AppCompatImageView
       android:id="@+id/ivIcon"
       android:layout_width="70dp"
       android:layout_height="70dp"
-      android:layout_marginTop="16dp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
+      android:tint="@color/colorWhite"
+      android:background="@null"
+      app:layout_constraintBottom_toBottomOf="@+id/ivBg"
+      app:layout_constraintEnd_toEndOf="@+id/ivBg"
+      app:layout_constraintStart_toStartOf="@+id/ivBg"
+      app:layout_constraintTop_toTopOf="@+id/ivBg"
       tools:src="@tools:sample/avatars"
       />
   <TextView
@@ -23,14 +35,14 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="16dp"
-      android:layout_marginTop="8dp"
-      android:textSize="16sp"
-      android:gravity="center"
+      android:layout_marginTop="16dp"
       android:fontFamily="@font/circe_regular"
+      android:gravity="center"
+      android:textSize="16sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/ivIcon"
+      app:layout_constraintTop_toBottomOf="@+id/ivBg"
       tools:text="@tools:sample/cities"
       />
 </android.support.constraint.ConstraintLayout>
