--- a/app/src/main/res-screen/main/layout/item_service_child.xml
+++ b/app/src/main/res-screen/main/layout/item_service_child.xml
@@ -3,34 +3,34 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clParent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp"
     android:foreground="?attr/selectableItemBackground"
-    android:id="@+id/clParent"
+    android:paddingBottom="4dp"
+    android:paddingEnd="16dp"
+    android:paddingStart="16dp"
+    android:paddingTop="4dp"
     >
   <android.support.constraint.ConstraintLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:background="@drawable/shape_rounded_corners"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
       >
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/ivIcon"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/expandable_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/expandable_layout"
         tools:src="@tools:sample/avatars"
         />
     <TextView
@@ -38,25 +38,25 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:textSize="18sp"
-        android:textColor="@color/colorDarkGray"
         android:fontFamily="@font/century_gothic"
-        app:layout_constraintTop_toTopOf="@id/ivIcon"
+        android:textColor="@color/colorDarkGray"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/ivIcon"
-        app:layout_constraintStart_toEndOf="@id/ivIcon"
         app:layout_constraintEnd_toStartOf="@id/ivArrow"
+        app:layout_constraintStart_toEndOf="@id/ivIcon"
+        app:layout_constraintTop_toTopOf="@id/ivIcon"
         tools:text="@tools:sample/cities"
         />
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/ivArrow"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/expandable_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/expandable_layout"
         app:srcCompat="@drawable/ic_arrow_collapsed"
         />
     <net.cachapa.expandablelayout.ExpandableLayout
@@ -65,10 +65,10 @@
         android:layout_height="wrap_content"
         app:el_duration="300"
         app:el_expanded="false"
-        app:layout_constraintTop_toBottomOf="@id/ivIcon"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ivIcon"
         >
 
       <android.support.constraint.ConstraintLayout
@@ -94,10 +94,13 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:padding="8dp"
-            android:fontFamily="@font/circe_regular"
             android:background="@drawable/selector_et_bg"
+            android:fontFamily="@font/circe_regular"
             android:hint="@string/payment_account_hint"
+            android:imeOptions="actionNext"
+            android:inputType="number"
+            android:nextFocusDown="@id/etAmount"
+            android:padding="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dashLine"
@@ -105,13 +108,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:alpha=".6"
             android:fontFamily="@font/circe_bold"
             android:text="@string/payment_account_title"
             android:textAllCaps="true"
             android:textColor="@color/colorGray"
             android:textSize="12sp"
-            android:layout_marginTop="4dp"
             app:layout_constraintStart_toStartOf="@id/etAccount"
             app:layout_constraintTop_toBottomOf="@id/etAccount"
             />
@@ -122,10 +125,12 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
-            android:padding="8dp"
-            android:fontFamily="@font/circe_regular"
             android:background="@drawable/selector_et_bg"
+            android:fontFamily="@font/circe_regular"
             android:hint="@string/payment_amount_hint"
+            android:imeOptions="actionDone"
+            android:inputType="number"
+            android:padding="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etAccount"
@@ -133,11 +138,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:alpha=".6"
             android:fontFamily="@font/circe_bold"
             android:text="@string/payment_amount_title"
             android:textAllCaps="true"
-            android:layout_marginTop="4dp"
             android:textColor="@color/colorGray"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="@id/etAmount"
@@ -178,9 +183,9 @@
             android:layout_height="1dp"
             android:alpha=".5"
             android:background="@color/colorTransparentGray"
+            app:layout_constraintBottom_toTopOf="@+id/btnCreateTemplate"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/btnCreateTemplate"
             />
       </android.support.constraint.ConstraintLayout>
 
