--- a/app/src/main/res-screen/main/layout/fragment_templates.xml
+++ b/app/src/main/res-screen/main/layout/fragment_templates.xml
@@ -23,7 +23,7 @@
       app:layout_constraintTop_toTopOf="parent"
       />
   <android.support.v7.widget.RecyclerView
-      android:id="@+id/rvCatalog"
+      android:id="@+id/rvTemplates"
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:layout_marginTop="16dp"
